@@ -1,3 +1,15 @@
+2003-05-27  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/focus.c (__update_windowlist):
+	don't fiddle with the window list for windows that are going to be
+	destroyed
+
+	* fvwm/add_window.c (delete_client_context):
+	(destroy_auxiliary_windows):
+	(destroy_window):
+	fixed empty frame windows when X reused the window id for a new window
+	while the old one was scheduled to be destroyed
+
 2003-05-26  olicha  <olivier.chapuis@free.fr>
 
 	* fvwm/icons.c (GetIconBitmap):
